# hvtiEDAreports

./: .gitignore  README.md  cli.py  eda_report.qmd  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: spec_v2.0.md
eda/: __init__.py  classify.py  delivery.py  loader.py  plots.py  summary.py  theme.py
installer/: build.sh  build_macos.spec  build_windows.spec
launcher/: __init__.py  app.py
launcher/static/: style.css
launcher/templates/: index.html
tests/: conftest.py  test_classify.py  test_loader.py  test_plots.py
