[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hvtiEDAreports"
version = "0.1.0"
description = "Dataset EDA Report Tool — CORR / CCF Heart & Vascular Institute"
authors = [
    { name = "John Ehrlinger", email = "john.ehrlinger@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "plotnine>=0.13",
    "mizani>=0.11",
    "pyreadstat>=1.2",
    "great-tables>=0.14",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "click>=8.1",
]

[project.scripts]
eda-report = "cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
build = [
    "pyinstaller>=6.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eda*", "launcher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=eda --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["eda"]
omit = ["tests/*", "installer/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
